# FYP-1-One-Shot-Random-Access-New-Architecture

./: .gitignore  README.md  SIMULATION_OPTIMIZATION.md  main.py  pyproject.toml
analytical/: README.md  __init__.py  formulas.py  theoretical.py
analytical/figure_analysis/: README.md  __init__.py  figure1_analysis.py  figure2_analysis.py  figure345_analysis.py
analytical/formulas/: README.md  __init__.py  formulas.py
analytical/theoretical/: README.md  __init__.py  theoretical.py
architecture/: README.md  complete_architecture_diagrams.md
architecture/data_flow/flow/: data_flow_diagram.md
architecture/data_flow/input_output/: data_input_output_diagram.md
architecture/formulas/: formula_dependency_diagram.md
architecture/structure/brace_maps/: module_brace_map.md  project_brace_map.md
architecture/structure/directory/: directory_tree.md
architecture/structure/module/: module_architecture_diagram.md  (+1 more)
config/: README.md  __init__.py  loader.py
config/analytical/: README.md  figure1.yaml  figure2.yaml  figure345.yaml
config/loader/: README.md  __init__.py  loader.py
config/simulation/: README.md  figure345.yaml  single_point.yaml
docs/: Paper.md
performance/: __init__.py  simple_timer.py
plot/: README.md  __init__.py  common.py  figure1.py  figure2.py  figure345.py
simulation/: README.md  __init__.py
simulation/core/: README.md  __init__.py  group_paging.py  metrics.py  one_shot_access.py
simulation/figure_simulation/: README.md  __init__.py  figure345_simulation.py
workflow/: main_workflow.md  workflow_instruction.md
(+24 files in other folders)
