[project]
name = "one-shot-random-access"
version = "2.0.0"
description = "One-Shot Random Access 模擬與分析系統 - 論文復現"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0.0",
    "scipy>=1.14.0",
]

[project.scripts]
osra = "main:main"

